# ssl_simulator_template

./: .gitignore  .pre-commit-config.yaml  .semgrep.yml  README.md  cookiecutter.json  copier.yml  justfile  pyproject.toml  requirements.txt
.github/workflows/: template-metatests.yml
docs/: template-development.md
template/: .gitignore  README.md.jinja  justfile  pyproject.toml.jinja  template.ipynb
template/controllers/: __init__.py  example_controller.py  example_controller_hl.py
template/notebooks/: template.ipynb  template.ipynb.jinja
template/robot_models/: example_robot.py
template/src/controllers/: example_controller.py
template/src/{{ project_slug }}/controllers/: __init__.py  example_controller.py  example_controller_hl.py
template/src/{{ project_slug }}/robot_models/: example_robot.py
template/src/{{ project_slug }}/visualization/: example_plot.py
tests/: conftest.py  test_template.py
{{cookiecutter.project_slug}}/: README.md
{{cookiecutter.project_slug}}/notebooks/: template.ipynb
{{cookiecutter.project_slug}}/src/controllers/: __init__.py
{{cookiecutter.project_slug}}/src/robot_models/: example_robot.py
